# module_template

./: .bazelrc  .gitignore  BUILD  LICENSE.md  MODULE.bazel  README.md  project_config.bzl  pyproject.toml  versions.json
.github/: CODEOWNERS
.github/actions/gitlint/: action.yml
.github/workflows/: docs-cleanup.yml  docs.yml  format.yml  gitlint.yml
docs/: BUILD  conf.py  index.rst
examples/: BUILD
main/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
main/_sources/: index.rst.txt
src/cpp/: BUILD  main.cpp
src/rust/: BUILD  main.rs
tests/cpp/: BUILD  test_main.cpp
tests/rust/: BUILD  test_main.rs
